--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server/index.js --exec babel-node",
+    "server": "babel-node ./src/server/index.js",
+    "server:watch": "nodemon ./src/server/index.js --exec babel-node",
+    "client": "webpack",
+    "client:watch": "webpack --watch",
     "test": "mocha --compilers js:babel-register"
   },
   "author": "",
@@ -13,9 +16,10 @@
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
@@ -39,15 +43,40 @@
     "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "react-youtube": "7.4.0"
   },
   "dependencies": {
     "airplayer": "^2.0.0",
     "body-parser": "^1.17.1",
+    "connect-redis": "^3.2.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "history": "^4.6.1",
+    "install": "^0.8.9",
+    "npm": "^4.5.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "peer": "^0.2.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redis": "^2.7.1",
+    "redis-connection": "^5.0.0",
+    "redux": "^3.6.0",
+    "redux-observable": "^0.14.1",
     "rethinkdb": "^2.3.3",
+    "rxjs": "^5.3.1",
+    "simple-peer": "^8.1.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
+    "socket.io-react": "^1.1.2",
     "spdy": "^3.4.4"
   }
 }
