--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "lift-off",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "server": "babel-node ./src/server/index.js",
     "server:watch": "nodemon ./src/server/index.js --exec babel-node",
     "client": "webpack",
     "client:watch": "webpack --watch",
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "test-client": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +25,10 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "i": "^0.3.5",
+    "jest": "^20.0.4",
     "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
@@ -38,13 +41,15 @@
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^6.0.4",
     "precss": "^1.4.0",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
+    "react-youtube": "7.4.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2",
-    "react-youtube": "7.4.0"
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "airplayer": "^2.0.0",
@@ -57,11 +62,12 @@
     "express-session": "^1.15.2",
     "history": "^4.6.1",
     "install": "^0.8.9",
-    "npm": "^4.5.0",
+    "npm": "^5.0.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "peer": "^0.2.8",
-    "react": "^15.5.4",
+    "react": "15.4",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
@@ -77,6 +83,19 @@
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "socket.io-react": "^1.1.2",
-    "spdy": "^3.4.4"
-  }
+    "spdy": "^3.4.4",
+    "youtube-node": "^1.3.0"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ohmatey/2gether.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ohmatey/2gether/issues"
+  },
+  "homepage": "https://github.com/ohmatey/2gether#readme",
+  "description": ""
 }
